# compute-shader-101

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
compute-shader-hello/: Cargo.toml
compute-shader-hello/src/: encode.rs  main.rs  shader.wgsl
compute-shader-toy/: Cargo.toml  README.md  foo.comp
compute-shader-toy/src/: copy.wgsl  main.rs  paint.comp  paint.spv  paint.wgsl
docs/: README.md  glossary.md
piet-compute-hello/: Cargo.toml  README.md
piet-compute-hello/shader/: shader.comp
piet-compute-hello/src/: main.rs
piet-compute-toy/: Cargo.toml  README.md
piet-compute-toy/shader/: build.ninja  shader.comp
piet-compute-toy/src/: main.rs
rust-gpu-toy/: Cargo.toml  README.md  rust-toolchain.toml
rust-gpu-toy/shaders/: Cargo.toml
rust-gpu-toy/shaders/src/: lib.rs
rust-gpu-toy/shared/: Cargo.toml
rust-gpu-toy/shared/src/: lib.rs
rust-gpu-toy/src/: main.rs
