[package]
name = "compute-shader-toy"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2021"

[dependencies]
wgpu = { version = "0.11.0"}
winit = "0.25"
pollster = "0.2"
async-executor = "1.4"
bytemuck = "1.7.1"
