[package]
name = "compute-shader-toy"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2021"

[dependencies]
wgpu = { version = "0.14"}
winit = "0.27.3"
pollster = "0.2.5"
async-executor = "1.4.1"
bytemuck = "1.12.1"
