[package]
name = "compute-shader-toy"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2021"

[dependencies]
wgpu = { version = "22.0.1" }
winit = "0.29"
pollster = "0.3"
async-executor = "1.8"
bytemuck = "1.14"
