[package]
name = "rust-gpu-toy"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu and rust-gpu."
edition = "2021"

[dependencies]
wgpu = { version = "0.11", features = ["spirv"] }
winit = "0.25"
pollster = "0.2"
async-executor = "1.0"
bytemuck = "1.6.3"
spirv-builder = { git = "https://github.com/DJMcNab/rust-gpu", rev = "c5bb9ebcf90a6bef3d9f11f79d3d33414f36091f", features = [
    "watch",
] }
rust-gpu-toy-shared = { path = "./shared" }

[workspace]
members = ["./shaders", "./shared"]
