[package]
name = "rust-gpu-toy-shaders"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "e66e72b049a88f3ae1f7c54cd6823ae458612952", features = ["glam", "const-generics"] }
rust-gpu-toy-shared = { path = "../shared" }
