[package]
name = "rust-gpu-toy-shaders"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "c4eb7af88ee0baf556cc6b46389a2e71b34919bf", features = [
    "glam",
] }
rust-gpu-toy-shared = { path = "../shared" }
